test/libsolidity/syntaxTests/pragma/broken_version_4.sol
pragma solidity (8.0.0);
// ----
// ParserError 1684: (0-24): Found version pragma, but failed to parse it. Please ensure there is a trailing semicolon.
